compile_log_2.txt
    Checking app v1.0.0 (/home/remco-stoeten/dora/apps/desktop/src-tauri)
warning: unused import: `std::sync::Arc`
 --> src/database/commands.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `self`
 --> src/database/services/connection.rs:9:20
  |
9 |         postgres::{self, connect::connect},
  |                    ^^^^

warning: unused import: `Faker`
 --> src/database/services/seeding.rs:5:18
  |
5 | use fake::{Fake, Faker};
  |                  ^^^^^

warning: unused import: `SchemaContext`
 --> src/database/services/ai/gemini.rs:4:36
  |
4 | use super::{AIRequest, AIResponse, SchemaContext};
  |                                    ^^^^^^^^^^^^^

warning: unused variable: `conf`
   --> src/database/services/connection.rs:516:101
    |
516 |                 let _temp_tunnel: Option<Arc<crate::database::ssh_tunnel::SshTunnel>> = if let Some(conf) = ssh_config {
    |                                                                                                     ^^^^ help: if this is intentional, prefix it with an underscore: `_conf`
    |
    = note: `#[warn(unused_variables)]` on by default

error[E0277]: the trait bound `impl Future<Output = Result<Option<Box<...>>, ...>>: FunctionResult<_>` is not satisfied
   --> src/database/commands.rs:245:1
    |
245 |   #[specta::specta]
    |   ^^^^^^^^^^^^^^^^^ the trait `FunctionResult<_>` is not implemented for `impl Future<Output = Result<Option<Box<RawValue>>, Error>>`
    |
   ::: src/bindings.rs:7:43
    |
  7 |       Builder::<tauri::Wry>::new().commands(collect_commands![
    |  ___________________________________________-
  8 | |         // Window commands
  9 | |         window_commands::minimize_window,
 10 | |         window_commands::maximize_window,
...   |
 68 | |         db_commands::ai_list_ollama_models
 69 | |     ])
    | |_____- in this macro invocation
    |
    = help: the trait `FunctionResult<FunctionResultMarker>` is implemented for `std::result::Result<T, E>`
    = note: required for `fn(usize, usize, State<'_, AppState>) -> impl Future<Output = ...>` to implement `function::specta_fn::SpectaFn<_>`
note: required by a bound in `get_fn_datatype`
   --> /home/remco-stoeten/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/specta-2.0.0-rc.22/src/internal.rs:236:40
    |
236 |     pub fn get_fn_datatype<TMarker, T: SpectaFn<TMarker>>(
    |                                        ^^^^^^^^^^^^^^^^^ required by this bound in `get_fn_datatype`
    = note: the full name for the type has been written to '/home/remco-stoeten/dora/apps/desktop/src-tauri/target/debug/deps/app_lib-4222cac315003a9f.long-type-18124844034244947075.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `db_commands::__specta__fn__fetch_page` which comes from the expansion of the macro `collect_commands` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `impl Future<Output = Result<Option<Box<...>>, ...>>: FunctionResult<_>` is not satisfied
   --> src/database/commands.rs:288:1
    |
288 |   #[specta::specta]
    |   ^^^^^^^^^^^^^^^^^ the trait `FunctionResult<_>` is not implemented for `impl Future<Output = Result<Option<Box<RawValue>>, Error>>`
    |
   ::: src/bindings.rs:7:43
    |
  7 |       Builder::<tauri::Wry>::new().commands(collect_commands![
    |  ___________________________________________-
  8 | |         // Window commands
  9 | |         window_commands::minimize_window,
 10 | |         window_commands::maximize_window,
...   |
 68 | |         db_commands::ai_list_ollama_models
 69 | |     ])
    | |_____- in this macro invocation
    |
    = help: the trait `FunctionResult<FunctionResultMarker>` is implemented for `std::result::Result<T, E>`
    = note: required for `fn(usize, State<'_, AppState>) -> impl Future<Output = ...>` to implement `function::specta_fn::SpectaFn<_>`
note: required by a bound in `get_fn_datatype`
   --> /home/remco-stoeten/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/specta-2.0.0-rc.22/src/internal.rs:236:40
    |
236 |     pub fn get_fn_datatype<TMarker, T: SpectaFn<TMarker>>(
    |                                        ^^^^^^^^^^^^^^^^^ required by this bound in `get_fn_datatype`
    = note: the full name for the type has been written to '/home/remco-stoeten/dora/apps/desktop/src-tauri/target/debug/deps/app_lib-4222cac315003a9f.long-type-6265748250080348135.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `db_commands::__specta__fn__get_columns` which comes from the expansion of the macro `collect_commands` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unreachable pattern
  --> src/database/parser.rs:43:15
   |
42 |             | ShowCollation { .. }
   |               -------------------- matches all the relevant values
43 |             | ShowCollation { .. } => true,
   |               ^^^^^^^^^^^^^^^^^^^^ no value can reach this
   |
   = note: `#[warn(unreachable_patterns)]` on by default

warning: unused variable: `handle`
   --> src/database/ssh_tunnel.rs:246:21
    |
246 |         if let Some(handle) = self.handle.take() {
    |                     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_handle`

For more information about this error, try `rustc --explain E0277`.
warning: `app` (lib) generated 7 warnings
error: could not compile `app` (lib) due to 2 previous errors; 7 warnings emitted
